--- a/registration/registrationCSS.css
+++ b/registration/registrationCSS.css
@@ -83,41 +83,36 @@ A:hover {
     color: grey; /* Ссылка красного цвета */
 }
 /* Button */
-.button {
-    display: inline-block;
-    font-family: arial,sans-serif;
-    font-size: 11px;
-    color: rgb(205,216,228);
-    text-shadow: 0 -1px rgb(46,53,58);
-    text-decoration: none;
-    user-select: none;
-    line-height: 2em;
-    padding: 1px 1.2em;
-    outline: none;
-    border: 1px solid rgba(33,43,52,1);
-    border-radius: 3px;
-    background: rgb(81,92,102) linear-gradient(rgb(81,92,102), rgb(69,78,87));
-    box-shadow:
-            inset 0 1px rgba(101,114,126,1),
-            inset 0 0 1px rgba(140,150,170,.8),
-            0 1px rgb(83,94,104),
-            0 0 1px rgb(86,96,106);
+button {
+    color: #fff;
+    background-color: #029E0A;
+    -moz-border-radius: 25px;
+    -o-border-radius: 25px;
+    border-radius: 25px;
+    border: none;
+    padding: 0.8% 3%;
+    margin: 0% 10%;
+    -webkit-background: linear-gradient(#018D09, #0BE100);
+    -moz-background: linear-gradient(#018D09, #0BE100);
+    -o-background: linear-gradient(#018D09, #0BE100);
+    background: linear-gradient(#018D09, #0BE100);
+    position: relative;
+    overflow: hidden;
 }
-.button:active {
-    box-shadow:
-            inset 0 1px 3px rgba(0,10,20,.5),
-            0 1px rgb(83,94,104),
-            0 0 1px rgb(86,96,106);
-}
-.button:focus:not(:active) {
-    border: 1px solid rgb(22,32,43);
-    border-bottom: 1px solid rgb(25,34,45);
-    background: rgb(53,61,71);
-    box-shadow:
-            inset 0 1px 3px rgba(0,10,20,.5),
-            0 1px rgb(83,94,104),
-            0 0 1px rgb(86,96,106);
-    pointer-events: none;
+button::before {
+    position: absolute;
+    content: '';
+    height: 50%;
+    width: 96%;
+    left: 2%;
+    top: 0.9px;
+    -webkit-background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.4));
+    -moz-background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.4));
+    -o-background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.4));
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.4));
+    -moz-border-radius: 25px;
+    -o-border-radius: 25px;
+    border-radius: 25px;
 }
 * {
     padding: 0;
